add new directories inside model and modify dbt-project-yml file

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,4 +35,9 @@ models:
   my_new_project:
     # Applies to all files under models/staging/
     staging:
-      materialized: table
+        materialized: table
+    prep:
+        materialized: table
+    mart:
+        materialized: table
+      
